tests/transpiler/x/java/group_by_left_join.error
exit status 1
Main.java:24: error: <identifier> expected
         name;
             ^
Main.java:26: error: <identifier> expected
        Data3( name, int count) {
                   ^
Main.java:33: error: <identifier> expected
         name;
             ^
Main.java:35: error: <identifier> expected
        Result4( name, int count) {
                     ^
Main.java:43: error: <identifier> expected
         o;
          ^
Main.java:44: error: <identifier> expected
        Item5(java.util.Map c,  o) {
                                 ^
Main.java:51: error: <identifier> expected
         key;
            ^
Main.java:53: error: <identifier> expected
        Group5( key, java.util.List<Item5> items) {
                   ^
8 errors
